--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
 
     // ConstraintLayout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
+
+    // compose Navigation
+//    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
 }
