--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,11 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
 
+    // pager
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+
+
     // LiveData
     implementation "androidx.compose.runtime:runtime-livedata:1.0.0-alpha09"
 }
