--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
 
+    // Hilt
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
     // LiveData
     implementation "androidx.compose.runtime:runtime-livedata:1.0.0-alpha09"
